SFDC Automation/src/objects/UVS_SheduleA_Request__c.object
<CustomObject>
    <description>UVS SheduleA</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ScheduleA_Request_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <formula>Account_Name__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account_Name__r.Owner.FirstName +&apos; &apos; + &apos; &apos;+ Account_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_Out_Approved__c</fullName>
        <label>Buy-Out Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <formula>Account_Name__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_City_State__c</fullName>
        <formula>Account_Name__r.ShippingCity &amp; &quot;, &quot;&amp;&quot; &quot; &amp; Account_Name__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company City, State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Zipcode__c</fullName>
        <formula>Account_Name__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Zipcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ScheduleA Request</relationshipLabel>
        <relationshipName>ScheduleA_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <formula>Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Fax_Number__c</fullName>
        <formula>Contact_Name__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Fax Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppStage__c</fullName>
        <label>OppStage</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Account_Name__r.Owner.FirstName&amp; &apos; &apos; &amp; &apos; &apos; &amp; Account_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>ScheduleA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesTax_Exempt__c</fullName>
        <label>SalesTax Exempt</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Pricing_Email__c</fullName>
        <formula>User_Pricing_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Pricing_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing User  Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ScheduleA_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Pricing_Title__c</fullName>
        <formula>User_Pricing_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing User Title</label>
        <type>Text</type>
    </fields>
    <label>ScheduleA Request</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>SheduleA Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScheduleA Request</pluralLabel>
    <recordTypes>
        <fullName>UVS_Lease</fullName>
        <active>true</active>
        <label>UVS Lease</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>